--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "antd": "^6.2.3",
+    "axios": "^1.13.4",
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
